# vector-db-benchmark

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark.py  main.py  plot_benchmarks.py  pyproject.toml  queries.yaml
databases/: base.py  milvus_client.py  pinecone_client.py  qdrant_client.py  sqlite_client.py  weaviate_client.py
embeddings/: embed.py
results/: metrics.json
scripts/: docker-compose.yml
utils/: config.py  metrics.py
